# LearningOpenGLProject

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Log.cpp  Log.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  glad.c
lib/glad/: glad.h
res/shader/: shader.fs  shader.vs  shader_light.fs
